--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.29.2",
     "firebase": "^9.9.1",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
     "react-router-dom": "^6.3.0",
